<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnStart">New set</string>
    <string name="btnExit">Exit</string>
    <string name="enterString">Enter string:</string>
    <string name="textEnter">Enter</string>
    <string name="textExit">Exit</string>
    <string name="option_name">OPTION NAME</string>
    <string name="description_main_option_text">description mainoption text</string>
    <string name="option">Option:</string>
    <string name="your_set">Your Set:</string>
</resources>